--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -4,6 +4,7 @@
 .customer-index-title{
   width: 90%;
   margin: 0 auto;
+  padding-top: 15px;
   .customer-index-title__searchForm{
     font-size: 25px;
   }
@@ -26,19 +27,12 @@
   }
   .text-container{
     width: 322px;
-    position: relative;
     margin-bottom: 5px;
     .customer-index-link{
       position: absolute;
       left: 70px;
       bottom: 5px;
     }
-  }
-  .paginate-layout{
-    margin: 0 auto;
-    padding: 5px;
-    height: 100px;
-    text-align: center;
   }
 }
 
@@ -62,17 +56,23 @@
         border-radius: 10px;
       }
     }
-    .card-text{
-      margin-top: 10px;
-    }
-    .customer-show-btn{
-      margin: 0 auto;
+    .text-container{
       text-align: center;
-      display: block;
-      width: 200px;
-      font-size: 20px;
-      color: white;
-      border-radius: 10px;
+      .card-text{
+        margin-top: 10px;
+      }
+      .chat-icon{
+        font-size: 30px;
+      }
+      .customer-show-btn{
+        margin: 0 auto;
+        text-align: center;
+        display: block;
+        width: 200px;
+        font-size: 20px;
+        color: white;
+        border-radius: 10px;
+      }
     }
   }
   .customer-show-table{
