--- a/app/assets/stylesheets/public/header_menu.scss
+++ b/app/assets/stylesheets/public/header_menu.scss
@@ -1,5 +1,5 @@
 .header-menu{
-  z-index: 100px;
+  text-align: center;
   width: 90%;
   height: 50px;
   background-color: white;
@@ -7,20 +7,18 @@
   margin-top: 10px;
   margin-bottom: 10px;
   .top-message{
-    position: fixed;
-    top: 10px;
-    left: 70px;
+    width: 300px;
+    float: left;
     h1{
       font-size: 20px;
     }
     p{
       font-size: 10px;
+      text-align: right;
     }
   }
   .header-sign-in-list{
-    position: fixed;
-    top: 10px;
-    right: 50px;
+    float: right;
     margin: 10px;
     display: flex;
     height: 15px;
