fix/chat-show-layout

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -37,7 +37,7 @@
   opacity: 0;
   z-index: 10;
   position: fixed;
-  top: 200px;
+  top: 120px;
   right: 10px;
   color: $white;
   font-size: 20px;
@@ -51,7 +51,7 @@
     border-radius: 10px;
   }
   .alert {
-    background-color: alert_red;
+    background-color: red;
     border-radius: 10px;
   }
 }
