--- a/app/assets/stylesheets/public/chat_rooms.scss
+++ b/app/assets/stylesheets/public/chat_rooms.scss
@@ -1,35 +1,56 @@
-.chat-romms-show-container{
+.chat-rooms-show-container{
   width: 90%;
+  height: 60%;
   margin: 0 auto;
-  .partner-container{
-    display: flex;
-    height: 40px;
-    width: 100%;
-    justify-content: flex-end;
+  .partner-index-container{
+    width: 300px;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 15px;
+    height: 90%;
+    overflow: scroll;
     p{
+      display: inline;
+    }
+    strong{
       font-size: 20px;
     }
-    .chat-room-customer-link{
-      text-decoration: none;
-      display: flex;
-      align-items: flex-end;
-      .img-element{
-        width: 50px;
-        height: 50px;
-        margin-right: 5px;
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          border-radius: 10px;
-        }
-      }
-      .name-element{
-        font-size: 20px;
-      }
+    .form-inline{
+      margin-top: 10px;
+    }
+    .do-chat{
+      font-size: 15px;
     }
   }
   .message-container{
+    width: 100%;
+    height: 400px;
+    overflow: scroll;
+    padding-right: 10px;
+    .partner-message{
+      text-align: right;
+      .chat-room-customer-link{
+        justify-content: flex-end;
+        margin-bottom: 10px;
+      }
+      .partner-content{
+        margin: 0 0 0 auto;
+        width: fit-content;
+        border: solid;
+        border-radius: 10px;
+        padding: 30px;
+      }
+    }
+    .self-message{
+      .self-content{
+        width: fit-content;
+        border: solid;
+        border-radius: 10px;
+        padding: 30px;
+        background-color: skyblue;
+        margin-top: 10px;
+      }
+    }
     ul{
       padding-left: 0;
       .chat-room-customer-link{
@@ -53,6 +74,40 @@
       }
       li{
         list-style: none;
+      }
+    }
+  }
+  .form-container{
+    text-align: center;
+    margin: 10px 10px 0 0;
+    .chat-form{
+      width: 100%;
+      height: 100px;
+      border-radius: 10px;
+    }
+    .chat-form-btn{
+      margin: 10px;
+    }
+  }
+  .partner-container{
+    width: 300px;
+    margin: 0 auto;
+    .img-container{
+      width: 300px;
+      height: 250px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+    }
+    .text-container{
+      text-align: center;
+      width: 300px;
+      margin-bottom: 5px;
+      .chat-partner-link{
+        margin: 10 auto;
       }
     }
   }
