fix/chat-room-css-modify

--- a/app/assets/stylesheets/public/chat_rooms.scss
+++ b/app/assets/stylesheets/public/chat_rooms.scss
@@ -3,6 +3,7 @@
   height: 60%;
   margin: 0 auto;
   .partner-index-container{
+    margin: 0 auto;
     width: 300px;
     border: 1px solid;
     border-radius: 10px;
