feature/responsive-menu

--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -3,8 +3,7 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .customer-index-title{
   width: 90%;
-  margin: 0 auto;
-  padding-top: 15px;
+  margin-left: 100px;
   .customer-index-title__searchForm{
     font-size: 25px;
   }
