--- a/app/assets/stylesheets/public/header_menu.scss
+++ b/app/assets/stylesheets/public/header_menu.scss
@@ -1,40 +1,76 @@
-.header-menu{
-  text-align: center;
-  width: 90%;
-  height: 50px;
-  background-color: white;
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  .top-message{
-    width: 300px;
-    float: left;
-    h1{
-      font-size: 20px;
+.header_container{
+  .header-menu{
+    margin: 0 auto;
+    width: 90%;
+    height: 60px;
+    background-color: white;
+    padding: 10px;
+    .top-message{
+      width: 300px;
+      float: left;
+      h1{
+        font-size: 20px;
+      }
+      p{
+        font-size: 10px;
+      }
     }
-    p{
-      font-size: 10px;
-      text-align: right;
+    .header-sign-in-list{
+      float: right;
+      margin: 10px;
+      display: flex;
+      height: 15px;
+      align-items: center;
+      .icon_mini{
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        border-radius: 10px;
+        cursor: pointer;
     }
   }
-  .header-sign-in-list{
-    float: right;
-    margin: 10px;
-    display: flex;
-    height: 15px;
-    align-items: center;
   }
-}
-
-.customer-menu{
-  width: 90%;
-  height: 50px;
-  background-color: lightblue;
-  margin: 0 auto;
-  border-radius: 10px;
-  ul{
-    display: flex;
-    align-items: center;
-    height: inherit;
+  .customer-menu-pc {
+    display: none;
+  }
+  .customer-menu-sp{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.95);
+    text-align: right;
+    padding: 64px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .6s;
+    .close-icon{
+      margin: 10px;
+      cursor: pointer;
+    }
+    .menu-sp-btn{
+      width: 200px;
+      margin: 5px;
+    }
+  }
+  .customer-menu-sp.show {
+    opacity: 1;
+    pointer-events: auto;
+  }
+  @media (min-width: 600px) {
+    .customer-menu-pc {
+      display: block;
+      width: 90%;
+      height: 50px;
+      background-color: lightblue;
+      margin: 0 auto;
+      border-radius: 10px;
+      ul{
+        display: flex;
+        align-items: center;
+        height: inherit;
+      }
+    }
   }
 }
