fix/db-modify-utf8mb4

--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -29,8 +29,8 @@
 
   .customer-menu-sp
     #close
-      %i.fa.fa-times.close-icon
-      閉じる
+      %span.fa.fa-times.close-icon
+        閉じる
     %ul.list-style-none
       - if customer_signed_in?
         %li
