--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %meta{:content => "text/haml; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{:content => "text/haml; charset=UTF-8mb4", "http-equiv" => "Content-Type"}/
     %title BeMyStyle
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
     = favicon_link_tag'favicon.ico'
