--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -25,7 +25,7 @@
               - if current_customer.present? && current_customer.profile_image.present?
                 = image_tag current_customer.profile_image, class: "icon_mini sp-menu-open"
               - else
-                = image_tag 'no_image', class: "icon_mini sp-menu-open"
+                = image_tag '/images/no_image.jpg', class: "icon_mini sp-menu-open"
 
   .customer-menu-sp
     #close
