fix/notification-scss

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -46,6 +46,7 @@
   height: 200px;
   border-radius: 10px;
   margin: 0 auto;
+  pointer-events: none;
   .notice {
     background-color: #17a2b8;
     border-radius: 10px;
