--- a/app/assets/stylesheets/public/homes/top.scss
+++ b/app/assets/stylesheets/public/homes/top.scss
@@ -12,3 +12,10 @@
   width: 100%;
   border-radius: 10px;
 }
+.slider {
+  opacity: 0;
+  transition: opacity .25s ease;
+}
+.slider.slick-initialized {
+  opacity: 1;
+}
