--- a/app/views/public/customers/index.html.haml
+++ b/app/views/public/customers/index.html.haml
@@ -4,9 +4,9 @@
   .row
     .col-md-4
       %h2 アーティスト一覧
-    .col-md-4
+    .col-md-4.sp-display.pc-kaminari
       = paginate @customers
-    .col-mid-4
+    .col-mid-4.sp-display.pc-serch
       = form_tag public_customers_path, method: :get, class: 'customer-index-title__searchForm' do
         = select_tag :part_id, options_from_collection_for_select(Part.all, :id, :name, params[:part_id]), {prompt: 'パートで絞り込み検索', onchange: 'submit(this.form);'}
 
