modify/sp-design

--- a/app/views/public/customers/show.html.haml
+++ b/app/views/public/customers/show.html.haml
@@ -1,5 +1,5 @@
 = render 'layouts/header_menu'
-.customer-show-title.sticky-top
+.customer-show-title
   %h2 アーティスト詳細
   .customer-show-follow
     - if @customer.id == current_customer.id
@@ -10,10 +10,11 @@
         = link_to "フォロー外す", public_customer_relationships_path(@customer.id), method: :delete, class: "btn btn-info customer-show-btn"
       - else
         = link_to "フォローする", public_customer_relationships_path(@customer.id), method: :post, class: "btn btn-info customer-show-btn"
+        【相互フォロー】でチャット可能!
     - if @mathing_customers.present? && current_customer.id != @customer.id && @mathing_customers.include?(@customer.id)
       = link_to public_chat_rooms_path(customer_id: @customer.id), method: :post do
         %i.fa-regular.fa-comments.chat-icon
-        このアーティストとチャットする
+        【Matching!!】チャットする🎵
 
 .customer-show-container.px-0.px-sm-0
   .row
@@ -42,10 +43,11 @@
                 = link_to "フォロー外す", public_customer_relationships_path(@customer.id), method: :delete, class: "btn btn-info customer-show-btn"
               - else
                 = link_to "フォローする", public_customer_relationships_path(@customer.id), method: :post, class: "btn btn-info customer-show-btn"
+                【相互フォロー】でチャット可能!
             - if @mathing_customers.present? && current_customer.id != @customer.id && @mathing_customers.include?(@customer.id)
               = link_to public_chat_rooms_path(customer_id: @customer.id), method: :post do
                 %i.fa-regular.fa-comments.chat-icon
-                このアーティストとチャットする🎵
+                【Matching!!】チャットする
     .col-md-9
       %table.table.table-striped.customer-show-table{:width=>"100%",:border=>"1"}
         %colgroup
