--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -56,6 +56,7 @@
 }
 
 .customer-show-title{
+  margin-bottom: 10px;
   height: 100px;
   background-color: white;
   h2{
@@ -99,7 +100,7 @@
         margin-top: 10px;
       }
       .chat-icon{
-        font-size: 30px;
+        font-size: 20px;
       }
       .customer-show-btn{
         margin: 0 auto;
