--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -71,7 +71,7 @@
     border: 1px solid;
     border-radius: 10px;
     text-align: center;
-    padding: 10px;
+    padding: 10px 0px;
     background-color: white;
     .chat-icon{
       margin-left: 10px;
