--- a/app/views/public/customers/show.html.haml
+++ b/app/views/public/customers/show.html.haml
@@ -4,7 +4,7 @@
   .customer-show-follow
     - if @customer.id == current_customer.id
       = link_to 'プロフィール編集', edit_public_customer_path(@customer), data: { 'turbolinks': false }, class: "btn btn-info customer-show-btn"
-      魅力的なプロフィールを作成しよう🎵
+      プロフィールを編集出来ます🎵
     - else
       - if current_customer.following?(@customer)
         = link_to "フォロー外す", public_customer_relationships_path(@customer.id), method: :delete, class: "btn btn-info customer-show-btn"
