--- a/app/views/public/customers/show.html.haml
+++ b/app/views/public/customers/show.html.haml
@@ -4,17 +4,17 @@
   .customer-show-follow
     - if @customer.id == current_customer.id
       = link_to 'プロフィール編集', edit_public_customer_path(@customer), data: { 'turbolinks': false }, class: "btn btn-info customer-show-btn"
-      プロフィールを編集出来ます🎵
+      魅力をアピールしよう
     - else
       - if current_customer.following?(@customer)
         = link_to "フォロー外す", public_customer_relationships_path(@customer.id), method: :delete, class: "btn btn-info customer-show-btn"
       - else
         = link_to "フォローする", public_customer_relationships_path(@customer.id), method: :post, class: "btn btn-info customer-show-btn"
-        【相互フォロー】でチャット可能!
+        フォローしてみよう!
     - if @mathing_customers.present? && current_customer.id != @customer.id && @mathing_customers.include?(@customer.id)
       = link_to public_chat_rooms_path(customer_id: @customer.id), method: :post do
         %i.fa-regular.fa-comments.chat-icon
-        【Matching!!】チャットする
+        チャットする🎵
 
 .customer-show-container.px-0.px-sm-0
   .row
