--- a/app/views/public/matchings/index.html.haml
+++ b/app/views/public/matchings/index.html.haml
@@ -1,10 +1,10 @@
 = render 'layouts/header_menu'
 
 .matchings-index-container
-  %h3 チャットができるアーティスト
+  %h5 チャットできるアーティスト
   %strong
     = @mathing_customers.size.to_s + '人'
-  %p 「相互フォロー」のアーティストとチャットができます🎵
+  %p 「相互フォロー」の人とチャットしよう🎵
   - @mathing_customers.each do |matching_customer|
     .col-md-6.mx-auto
       .form-inline
