--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -167,3 +167,14 @@ input[type="text"] {
   width: 90%;
   height: 40px;
 }
+
+.error-message{
+  text-align: center;
+  padding: 10px;
+  border: solid 1px;
+  border-radius: 10px;
+  color: red;
+  ul{
+    list-style: none;
+  }
+}
