--- a/app/views/public/shared/_error_messages.html.haml
+++ b/app/views/public/shared/_error_messages.html.haml
@@ -1,6 +1,6 @@
 - if resource.errors.any?
-  #error_explanation
-    %h3
+  #error_explanation.error-message
+    %h5
       = I18n.t("errors.messages.not_saved",                 |
         count: resource.errors.count,                       |
         resource: resource.class.model_name.human.downcase) |
