fix/sp-design-customer-show-btn

--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -104,6 +104,7 @@
       }
       .customer-show-btn{
         margin: 0 auto;
+        margin-bottom: 5px;
         text-align: center;
         display: block;
         width: 200px;
