--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -4,7 +4,7 @@
       .col-8
         .top-message
           %h1 be My Style
-          %p ようこそ！あなたの「やりたい！」を叶える場所へ！
+          %p あなたの「在りたい！」を叶える場所！
       .col-4
         %ul.list-style-none.header-sign-in-list
           - if customer_signed_in?
