--- a/app/views/public/customers/show.html.haml
+++ b/app/views/public/customers/show.html.haml
@@ -12,7 +12,7 @@
         = link_to "フォローする", public_customer_relationships_path(@customer.id), method: :post, class: "btn btn-info customer-show-btn"
         フォローしてみよう!
     - if @mathing_customers.present? && current_customer.id != @customer.id && @mathing_customers.include?(@customer.id)
-      = link_to public_chat_rooms_path(customer_id: @customer.id), method: :post do
+      = link_to public_chat_rooms_path(customer_id: @customer.id), method: :post, class: "btn btn-info" do
         %i.fa-regular.fa-comments.chat-icon
         チャットする🎵
 
@@ -45,9 +45,9 @@
                 = link_to "フォローする", public_customer_relationships_path(@customer.id), method: :post, class: "btn btn-info customer-show-btn"
                 【相互フォロー】でチャット可能!
             - if @mathing_customers.present? && current_customer.id != @customer.id && @mathing_customers.include?(@customer.id)
-              = link_to public_chat_rooms_path(customer_id: @customer.id), method: :post do
+              = link_to public_chat_rooms_path(customer_id: @customer.id), method: :post, class: "btn btn-info customer-show-btn" do
                 %i.fa-regular.fa-comments.chat-icon
-                【Matching!!】チャットする
+                チャットする🎵
     .col-md-9
       %table.table.table-striped.customer-show-table{:width=>"100%",:border=>"1"}
         %colgroup
