--- a/app/views/public/chat_rooms/show.html.haml
+++ b/app/views/public/chat_rooms/show.html.haml
@@ -40,7 +40,7 @@
                     = chat_message.customer.name + 'さんのメッセージ'
                 %li
                 .partner-content
-                  = chat_message.content
+                  = simple_format(chat_message.content)
                 %li
                 = l chat_message.created_at
                 に送信済み
@@ -60,7 +60,7 @@
                     = chat_message.customer.name + 'さんのメッセージ'
                 %li
                 .self-content
-                  = chat_message.content
+                  = simple_format(chat_message.content)
                 %li
                 = l chat_message.created_at
                 に送信済み
