fix/chat-design-layout

--- a/app/assets/stylesheets/public/chat_rooms.scss
+++ b/app/assets/stylesheets/public/chat_rooms.scss
@@ -40,7 +40,7 @@
       }
       .partner-content{
         margin: 0 0 0 auto;
-        width: fit-content;
+        width: 300px;
         border: solid;
         border-radius: 10px;
         padding: 10px;
@@ -48,7 +48,7 @@
     }
     .self-message{
       .self-content{
-        width: fit-content;
+        width: 300px;
         border: solid;
         border-radius: 10px;
         padding: 10px;
