--- a/app/assets/stylesheets/public/chat_rooms.scss
+++ b/app/assets/stylesheets/public/chat_rooms.scss
@@ -40,6 +40,7 @@
       }
       .partner-content{
         margin: 0 0 0 auto;
+        text-align: left;
         width: 300px;
         border: solid;
         border-radius: 10px;
