fix/chat-design-modif-2

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -27,6 +27,10 @@
   margin-right: 10px;
 }
 
+.text-red{
+  color: red; 
+}
+
 .notifications {
   animation-name: smooth-fadein-out;
   animation-duration: 10s;
@@ -107,6 +111,10 @@
 
 .registration-table{
   border: thick double lightblue;
+  input[type="text"] {
+  width: 185px;
+  height: 40px;
+}
 }
 
 .registration-btn{
