--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -36,6 +36,8 @@
         %li
           = link_to "Topページ", public_homes_top_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
         %li
+          = link_to "コミュニティ一覧", public_communities_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
+        %li
           = link_to "Artist一覧", public_customers_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
         %li
           - if current_customer.present?
@@ -58,6 +60,8 @@
     %ul.list-style-none
       %li
         = link_to "Topページ", public_homes_top_path, data: { 'turbolinks': false }, class: "btn btn-info"
+      %li
+        = link_to "コミュニティ一覧", public_communities_path, data: { 'turbolinks': false }, class: "btn btn-info menu-sp-btn"
       %li
         = link_to "Artist一覧", public_customers_path, data: { 'turbolinks': false }, class: "btn btn-info"
       %li
