--- a/app/views/public/communities/show.html.haml
+++ b/app/views/public/communities/show.html.haml
@@ -1,1 +1,37 @@
 = render 'layouts/header_menu'
+
+.community-show-container
+  %h2 コミュニティ詳細
+  %table.table.table-striped.community-table{:width=>"100%",:border=>"1"}
+    %thead
+      %tr
+        %th コミュニティ画像
+        %th コミュニテイ名
+        %th 紹介文
+        %th メンバー
+        %th{:colspan=>"3"}
+    %tbody
+      %tr
+        %td
+          .img-container
+            - if @community.community_image.present?
+              = image_tag @community.community_image
+            - else
+              = image_tag 'no_image'
+        %td
+          = @community.name
+        %td
+          = @community.introduction
+        %td
+          - if @community.customers.exists?
+            - @community.customers.each do |member|
+              = member.name
+          - else
+            まだメンバーはいません。
+        %td
+          - if @community.owner_id == current_customer.id
+            = link_to '編集する', edit_public_community_path(@community), class: "btn btn-sm btn-success"
+          - elsif @community.customers.include?(current_customer)
+            = link_to 'コミュニティを抜ける', public_community_leave_path(@community), method: :delete, class: "btn btn-sm btn-danger"
+          -else
+            = link_to 'コミュニティに参加する', public_community_join_path(@community), class: "btn btn-sm btn-success"
