--- a/app/assets/stylesheets/public/communities.scss
+++ b/app/assets/stylesheets/public/communities.scss
@@ -1,21 +1,6 @@
 .community-index-container{
   margin: 0 auto;
   width: 90%;
-  .img-container{
-    width: 50px;
-    height: 50px;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 10px;
-    }
-  }
-}
-
-.community-show-container{
-  margin: 0 auto;
-  width: 90%;
   .community-table{
     border: thick double lightblue;
     .img-container{
@@ -28,5 +13,64 @@
         border-radius: 10px;
       }
     }
+  }
+}
+
+.community-show-title{
+  text-align: center;
+  margin: 0 auto;
+  width: 90%;
+  height: 60px;
+  margin-bottom: 10px;
+  height: 100px;
+  background-color: white;
+  .community-show-follow{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 60px;
+    margin: 0 auto;
+    border: 1px solid;
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px 0px;
+    background-color: white;
+  }
+}
+
+.community-show-container{
+  width: 90%;
+  margin: 0 auto;
+  .community-show-card{
+    border: thick double lightblue;
+    .img-container{
+      width: 100%;
+      height: 300px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+    }
+    .text-container{
+      text-align: center;
+      .card-text{
+        margin-top: 10px;
+      }
+      .community-show-btn{
+        margin: 0 auto;
+        margin-bottom: 5px;
+        text-align: center;
+        display: block;
+        width: 200px;
+        font-size: 20px;
+        color: white;
+        border-radius: 10px;
+      }
+    }
+  }
+  .community-show-table{
+    border: thick double lightblue;
   }
 }
