--- a/app/views/public/communities/index.html.haml
+++ b/app/views/public/communities/index.html.haml
@@ -1,21 +1,38 @@
 = render 'layouts/header_menu'
 
 .community-index-container
-  %h2 コミュニティリスト
-  - if @communities.present?
-    - @communities.each do |community|
-      %tr
-        %td
-          .img-container
-            - if community.community_image.present?
-              = image_tag community.community_image
-            - else
-              = image_tag 'no_image'
-        %td
-          = link_to community.name, public_community_path(community), data: { 'turbolinks': false }
-        %td
-          = community.introduction
-        %td
-          = community.customers.count
-  - else
-    コミュニティはまだありません。
+  %h2 コミュニティ一覧
+  - @communities.each do |community|
+    %table.table.table-striped.community-table{:width=>"100%",:border=>"1"}
+      %thead
+        %tr
+          %th コミュニティ画像
+          %th コミュニテイ名
+          %th コミュニティ紹介文
+          %th 人数
+          %th 詳細ページ
+          %th{:colspan=>"3"}
+      %tbody
+        %tr
+          %td
+            = link_to public_community_path(community), data: { 'turbolinks': false } do
+              .img-container
+                - if community.community_image.present?
+                  = image_tag community.community_image
+                - else
+                  = image_tag 'no_image'
+          %td
+            = link_to community.name, public_community_path(community), data: { 'turbolinks': false }
+          %td
+            = community.introduction
+          %td
+            = community.customers.count.to_s + "人"
+          %td
+            = link_to "詳細", public_community_path(community), data: { 'turbolinks': false }
+          %td
+            - if community.owner_id == current_customer.id
+              = link_to '編集する', edit_public_community_path(community), class: "btn btn-sm btn-success"
+            - elsif community.customers.include?(current_customer)
+              = link_to 'コミュニティを抜ける', public_community_leave_path(community), method: :delete, class: "btn btn-sm btn-danger", data: { confirm: 'こちらのコミュニティを抜けます。よろしいですか？' }
+            -else
+              = link_to 'コミュニティに参加する', public_community_join_path(community), class: "btn btn-sm btn-success", data: { confirm: 'こちらのコミュニティに参加します。よろしいですか？' }
